# Pentagram

./: .gitignore  CMakeLists.txt  README.md  build-instruction.txt  Пояснительная записка.docx  Пояснительная_Записка.docx  Пояснительная_Записка_rdy.docx
src/: audioHandler.cpp  audioHandler.hpp  controls.cpp  controls.hpp  game.cpp  game.hpp  graphicsHandler.cpp  graphicsHandler.hpp  main.cpp  menu.cpp  menu.hpp  penta_mc.cpp  penta_mc.hpp  statRecorder.cpp  statRecorder.hpp
